# ifex

./: .gitignore  .npmignore  CHANGELOG.md  Cargo.toml  PUBLISH.md  README.md  clippy.toml  eslint.config.js  package-lock.json  package.json  rustfmt.toml  test_apply_and_read.rs
.claude/: CLAUDE.md
.github/workflows/: ci.yml  publish-on-tag.yml  publish.yml  release.yml
Formula/: ifex.rb
examples/: README.md  create_test_images.py
src/: cli.js  cli.rs  config.js  config.rs  data.rs  dataManager.js  exif.js  file_selector.rs  index.js  interface.rs  lib.rs  main.rs  managementCLI.js  models.js  models.rs  promptUtils.js  prompts.rs  searchUtils.js  utils.rs
src/exif/: exifManager.js  exif_manager.rs  fileCollector.js  fileTypes.js  file_types.rs  jpegProcessor.js  mod.rs  processors.rs  rawProcessor.js  sidecarProcessor.js  tags.js  tags.rs  tiffProcessor.js
test/: dataManager.test.js  exifManager.test.js  exifManagerIntegration.test.js  exifTags.test.js  fileTypes.test.js  integration.test.js  jpegProcessor.test.js  models.test.js  searchUtils.test.js  sidecarProcessor.test.js
tests/: cli_one_sec_test.rs  config_test.rs  exif_fix_test.rs  file_selector_test.rs  file_types_test.rs  film_info_test.rs  integration_test.rs  lib.rs  models_test.rs  utf8_truncation_test.rs  utils_test.rs
